fixed linking errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p><b>
                 Indulge your sences with our freshly baked trests and artisanal bread,made with only the finest 
                 <br>ingredients.From warm ,flacky croissants to rich ,decanted 
-                cakes ,our bakery <br>offers a mouthwatering selection that
+                cakes ,our Bakery <br>offers a mouthwatering selection that
                 will satify any sweet tooth .Our skilled bakers take pride in creating delicious,unique desserts 
                 <br>that are both beautiful and tasty.Whether you looking for a daily 
                 treat or a special  occation centerpiece ,we've got you covered.
