--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@ function validateForm() {
 <section class="hme">
     <nav>
         <ul>
-    <li><a href="baker.html">HOME</a></li>
+    <li><a href="index.html">HOME</a></li>
     <li><a href="about.html">ABOUT</a></li>
     <li><a href="services.html">SERVICES</a></li>
     <li><a href="contact.html">CONTACTS</a></li>
